<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_start">

    <fragment
        android:id="@+id/nav_start"
        android:name="com.example.biker112.ui.startRide.StartRideFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_start_ride" />

    <fragment
        android:id="@+id/nav_veh"
        android:name="com.example.biker112.ui.myVehicle.MyVehicleFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_myvehicle" />

    <fragment
        android:id="@+id/nav_ride_h"
        android:name="com.example.biker112.ui.rideHistory.RideHistoryFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_ride_history" />

    <fragment
        android:id="@+id/nav_emer"
        android:name="com.example.biker112.ui.emergencyCont.EmergencyContactFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_emerg" />

    <fragment
        android:id="@+id/nav_prof"
        android:name="com.example.biker112.ui.profile.ProfileFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_sup"
        android:name="com.example.biker112.ui.support.SupportFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_tools" />
</navigation>