<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".ui.myVehicle.AddVehicleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_av"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"/>


        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfile"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:src="@drawable/ic_place"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/white"/>

            <LinearLayout
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_90sdp"
                android:gravity="bottom|right">


                <ImageView
                    android:id="@+id/ivCamera"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:visibility="visible"
                    android:gravity="end|bottom"
                    android:src="@drawable/ic_camera"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout android:id="@+id/llProp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            android:background="@drawable/line_border"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:gravity="right|center">

            <com.example.biker112.ui.utils.NoDefaultSpinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:dropDownWidth="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:prompt="@string/veh_type">
            </com.example.biker112.ui.utils.NoDefaultSpinner>


            <TextView android:id="@+id/tvOrg"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:textSize="@dimen/_12sdp"
                android:visibility="gone"
                android:textColor="@color/black"
                android:hint="   Amenity Name"/>


        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiVehN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etVehN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/veh_n"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/frame_n"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiLic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etLic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/lic_no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiInsN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etInsN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/ins_n"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiInsNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etInsNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/ins_no"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/ud"
            android:layout_marginLeft="@dimen/_20sdp"
            android:textColor="@color/black"/>


        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">



    <Button
        android:id="@+id/btn_verify"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/back_black_button_rounded"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginBottom="@dimen/_60sdp"
        android:text="@string/text_save"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>