<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_15sdp"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.85"
                android:gravity="center"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivProfile"
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:src="@drawable/ic_place"
                        app:civ_border_width="2dp"
                        app:civ_border_color="@color/white"/>

                    <LinearLayout
                        android:layout_width="@dimen/_70sdp"
                        android:layout_height="@dimen/_70sdp"
                        android:gravity="bottom|right">


                        <ImageView
                            android:id="@+id/ivCamera"
                            android:layout_width="@dimen/_30sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:visibility="visible"
                            android:gravity="end|bottom"
                            android:src="@drawable/ic_camera"/>

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivCross"
                android:layout_width="@dimen/_18sdp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_1sdp"
                android:src="@drawable/ic_cross"/>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/text_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="@dimen/_70sdp"
            android:gravity="center"
            android:layout_height="match_parent"
            app:ccp_showFlag="false"
            app:ccp_showNameCode="false"
            app:ccpDialog_showPhoneCode="true"
            app:ccp_autoDetectCountry="true"
            android:textColor="@color/textColor" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:inputType="number"
                android:hint="@string/text_mob"/>

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/text_email"/>


             <TextView
                 android:id="@+id/tvError"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="right|bottom"
                 android:visibility="gone"
                 android:textColor="@color/black"
                 android:layout_marginBottom="@dimen/_10sdp"
                 android:text="Incorrect"
                 />

            </FrameLayout>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiRel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etRel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:hint="@string/text_rel"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/back_black_button_rounded"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/text_save"/>


    </LinearLayout>

</LinearLayout>