<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:visibility="invisible"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:visibility="visible"
                android:gravity="end"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/icon_edit"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/ic_place"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/white"/>

        <LinearLayout
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:gravity="bottom|right">


        <ImageView
            android:id="@+id/ivCamera"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:visibility="visible"
            android:gravity="end|bottom"
            android:src="@drawable/ic_camera"/>

        </LinearLayout>

    </FrameLayout>


     <EditText
         android:id="@+id/etName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Name"
         android:layout_marginTop="@dimen/_10sdp"
         android:gravity="center"
         android:textColor="@color/black"
         android:textSize="@dimen/_30sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="@dimen/_70sdp"
                android:gravity="center"
                android:layout_height="match_parent"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccpDialog_showPhoneCode="true"
                app:ccp_autoDetectCountry="true"
                android:textColor="@color/textColor" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:layout_marginBottom="@dimen/_5sdp">

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_mob"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:textSize="@dimen/_12sdp" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:hint="@string/text_email"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiBlood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp">

            <EditText
                android:id="@+id/etBlood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:maxLines="1"
                android:textColor="@color/black"
                android:hint="@string/text_bg"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_verify"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/back_black_button_rounded"
            android:layout_marginTop="@dimen/_25sdp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/text_save"/>


    </LinearLayout>

</LinearLayout>