<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    android:id="@+id/llScreen"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.login.SplashScreen"
    android:isScrollContainer="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/otp_screen_height">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_28sdp"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="-3"
            android:shadowDy="-3"
            android:shadowRadius="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/text_biker_head"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            android:shadowColor="@color/black"
            android:shadowDx="-3"
            android:shadowDy="-3"
            android:shadowRadius="1"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:text="@string/text_biker_sub"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:background="@drawable/back_rect_drawable">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/back_login_edit">

                <LinearLayout
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/ccp"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    app:ccp_showFlag="false"
                    app:ccp_showNameCode="false"
                    app:ccpDialog_showPhoneCode="true"
                    app:ccp_autoDetectCountry="true"
                    android:textColor="@color/textColor" />

                </LinearLayout>

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@color/textColor"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="horizontal">


                <EditText
                    android:id="@+id/etMobileNumber"
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/text_mobile_number"
                    android:textColor="@color/textColor"/>

                <LinearLayout
                    android:layout_width="@dimen/_45sdp"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/left_arrow">

                    <ImageView
                        android:id="@+id/ivNext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/left_arrow"/>


                </LinearLayout>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>


    </LinearLayout>


</LinearLayout>